refactor(jpa): 优化审计监听器性能和批量操作逻辑
- 审计实体监听器中缓存当前用户，避免重复调用 getCurrentUser() 方法
- 批量操作模板修正循环条件，确保批处理结果大于0时继续执行
- 加密转换器重构盐值管理机制，区分生产和开发环境配置策略
- 代码枚举类型转换器增加反射访问异常处理，支持Java 17+模块系统
- 方言策略统一INSERT语句构建方法，修复MySQL 8.0.20+语法兼容性问题
- 查询规范添加缓存键生成功能，包含实际参数值避免缓存键冲突
- 关键集分页辅助类修正空值处理逻辑，统一升序和降序排序行为
- 合并规格改进唯一约束冲突检测机制，使用SQL状态码提高准确性
- 查询缓存管理器优化过期条目清理，避免并发情况下的误删除问题
- 乐观锁重试顾问增强注解查找功能，支持Spring代理场景下的方法识别
- MySQL方言实现改用行别名语法，兼容新版本MySQL的UPSERT操作